[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/themeNormal.tres" type="Theme" id=1]
[ext_resource path="res://scenes/UI/WinScreen.gd" type="Script" id=2]
[ext_resource path="res://scenes/AnimatedButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/vignette.png" type="Texture" id=4]
[ext_resource path="res://sounds/Win.wav" type="AudioStream" id=5]

[node name="WinScreen" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.470588 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vignette" type="Sprite" parent="."]
modulate = Color( 0.713726, 0.713726, 0.713726, 0.470588 )
position = Vector2( 318.5, 171 )
scale = Vector2( 5.17969, 4 )
texture = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -320.0
margin_bottom = -180.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
pause_mode = 2
margin_right = 320.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
pause_mode = 2
margin_left = 35.0
margin_top = 24.0
margin_right = 285.0
margin_bottom = 156.0
custom_constants/separation = 6

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_right = 250.0
margin_bottom = 13.0
theme = ExtResource( 1 )
text = "GANHOU O JOGO!"
align = 1

[node name="Label2" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 19.0
margin_right = 250.0
margin_bottom = 64.0
rect_min_size = Vector2( 250, 0 )
theme = ExtResource( 1 )
text = "Voce completou todo o jogo, passou por 0 levels, sofreu 0 de dano e ganhou 0 de score em sua longa jornada, parabens!"
align = 1
valign = 2
autowrap = true

[node name="Control" type="Control" parent="MarginContainer/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 70.0
margin_right = 250.0
margin_bottom = 70.0

[node name="BtnVoltar" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
pause_mode = 2
margin_left = 77.0
margin_top = 76.0
margin_right = 173.0
margin_bottom = 101.0
rect_scale = Vector2( 1, 1 )
text = "JOGAR NOVAMENTE"

[node name="BtnMenu" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
pause_mode = 2
margin_left = 77.0
margin_top = 107.0
margin_right = 173.0
margin_bottom = 132.0
rect_scale = Vector2( 1, 1 )
text = "IR PARA O MENU"

[node name="Win" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/BtnVoltar" to="." method="_on_BtnVoltar_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/BtnMenu" to="." method="_on_BtnMenu_pressed"]
